--- a/views/staff/examRoom_studentListTable.hbs
+++ b/views/staff/examRoom_studentListTable.hbs
@@ -1,97 +1,50 @@
 <div class="row">
-    <div class="semester ml-2 mb-2">
-        <p class="labelSemester">Năm học: 2019-2020</p>
+    <div class="col-6">
+        <div class="semester ml-2 mb-2">
+            <a href="/staff/room-exam?year={{year}}&semester={{semesterID}}" class="labelSemester">Quay lại</a>
+        </div>
     </div>
-    <div class="semester ml-2 mb-2">
-        <p class="labelSemester">Học kì: 2</p>
-    </div>
-    <div class="semester ml-2 mb-2">
-        <p style="text-align:center; vertical-align:middle; line-height:2rem; color: black">Mã phòng: A101</p>
-    </div>
-    <div class="semester ml-2 mb-2">
-        <p style="text-align:center; vertical-align:middle; line-height:2rem; color: black">Môn học: Toán 12</p>
+    <div class="col-6 d-flex justify-content-end">
+        <div class="semester ml-2 mb-2">
+            <p class="labelSemester">Năm học: {{year}}</p>
+        </div>
+        <div class="semester ml-2 mb-2">
+            <p class="labelSemester">Học kì: {{semesterID}}</p>
+        </div>
     </div>
 </div>
 
 <div class="card shadow mb-4">
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>MÃ HỌC SINH</th>
-                        <th>TÊN HỌC SINH</th>
-                        <th>MÃ LỚP</th>
-                        <th></th>
+                        <th style="text-align: center;">STT</th>
+                        <th style="text-align: center;">MÃ HS</th>
+                        <th style="text-align: center;">TÊN HỌC SINH</th>
+                        <th style="text-align: center;">MÃ LỚP</th>
+                        <th style="text-align: center;">LỚP</th>
+                        <th style="text-align: center;">NGÀY SINH</th>
+                        <th style="text-align: center;">GIỚI TÍNH</th>
                     </tr>
                 </thead>
                 <tbody>
+
+                    {{#each listStudent}}
                     <tr>
-                        <td>ABC123</td>
-                        <td>NGUYỄN TẠ PHÚ CƯỜNG</td>
-                        <td>10D2</td>
-                        <td><i class="fa fa-pencil-square-o" data-toggle="modal" data-target="#modalroomExamEdit"
-                                aria-hidden="true"></i></td>
+                        <td style="text-align: center;">{{count}}</td>
+                        <td style="text-align: center;">{{studentID}}</td>
+                        <td style="text-align: center;">{{studentFullName}}</td>
+                        <td style="text-align: center;">{{classID}}</td>
+                        <td style="text-align: center;">{{className}}</td>
+                        <td style="text-align: center;">{{dob}}</td>
+                        <td style="text-align: center;">{{gender}}</td>
+                    </tr>
+                    {{/each}}
                     </tr>
                 </tbody>
             </table>
-        </div>
-    </div>
-</div>
-<div class="modal fade" id="modalroomExamEdit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header text-center">
-                <h4 class="modal-title w-100 font-weight-bold">Sửa danh sách</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body mx-3">
-                <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-roomID">Mã học sinh</label>
-                    <input type="text" id="defaultForm-roomID" class="form-control validate">
-                </div>
-                <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-subjectID">Mã lớp</label>
-                    <input type="text" id="defaultForm-subjectID" class="form-control validate">                
-                </div>
-
-            </div>
-            <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-danger">Xác nhận</button>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="text-center">
-  <a href="" class="btn btn-primary btn-rounded mb-4" data-toggle="modal" data-target="#modalAddStudent">Thêm học sinh vào danh sách</a>
-</div>
-<div class="modal fade" id="modalAddStudent " tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header text-center">
-                <h4 class="modal-title w-100 font-weight-bold">Thêm học sinh vào danh sách</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body mx-3">
-                <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-roomID">Mã học sinh</label>
-                    <input type="text" id="defaultForm-roomID" class="form-control validate">
-                </div>
-                <div class="md-form mb-2 form-inline">
-                    <label data-error="wrong" data-success="right" for="defaultForm-subjectID">Mã lớp</label>
-                    <input type="text" id="defaultForm-subjectID" class="form-control validate">                
-                </div>
-
-            </div>
-            <div class="modal-footer d-flex justify-content-center">
-                <button class="btn btn-danger">Xác nhận</button>
-            </div>
         </div>
     </div>
 </div>
