--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -11,7 +11,7 @@
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
   <!-- Custom styles for this template-->
   {{#each style}}
   <link rel="stylesheet" href="../../css/{{this}}">
@@ -120,6 +120,83 @@
   {{!-- custom scripts for datatable --}}
   <script src="../../js/datatable.js"></script>
   <script src="//cdn.datatables.net/plug-ins/1.10.11/sorting/date-eu.js" type="text/javascript"></script>
+  <script>
+
+
+  </script>
+
+  {{#chartScore totalScore}}
+  {{/chartScore}}
+  {{#chartScore listScore.class10}}
+  {{/chartScore}}
+  {{#chartScore listScore.class11}}
+  {{/chartScore}}
+  {{#chartScore listScore.class12}}
+  {{/chartScore}}
+
+  {{#chartConduct totalConduct}}
+  {{/chartConduct}}
+  {{#chartConduct listConduct.class10}}
+  {{/chartConduct}}
+  {{#chartConduct listConduct.class11}}
+  {{/chartConduct}}
+  {{#chartConduct listConduct.class12}}
+  {{/chartConduct}}
+
+  <script>
+    // Set new default font family and font color to mimic Bootstrap's default styling
+    (Chart.defaults.global.defaultFontFamily = "Nunito"),
+      '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+    Chart.defaults.global.defaultFontColor = "#858796";
+
+    // Pie Chart Example
+    var ctx = document.getElementById("myPieChart3");
+    var myPieChart = new Chart(ctx, {
+      type: "doughnut",
+      data: {
+        labels: ["Giỏi", "Khá", "Trung Bình", "Yếu", "Kém"],
+        datasets: [
+          {
+            data: [70, 20, 8, 6, 3],
+            backgroundColor: [
+              "#4e73df",
+              "#1cc88a",
+              "#36b9cc",
+              "#f6c23e",
+              "#e74a3b",
+            ],
+            hoverBackgroundColor: [
+              "#2e59d9",
+              "#17a673",
+              "#2c9faf",
+              "#be8b09",
+              "#d12a1a",
+            ],
+            hoverBorderColor: "rgba(234, 236, 244, 1)",
+          },
+        ],
+      },
+      options: {
+        maintainAspectRatio: false,
+        tooltips: {
+          backgroundColor: "rgb(255,255,255)",
+          bodyFontColor: "#858796",
+          borderColor: "#dddfeb",
+          borderWidth: 1,
+          xPadding: 15,
+          yPadding: 15,
+          displayColors: false,
+          caretPadding: 10,
+        },
+        legend: {
+          display: false,
+        },
+        cutoutPercentage: 80,
+      },
+    });
+
+  </script>
+
 </body>
 
 </html>
