--- a/views/staff/report.hbs
+++ b/views/staff/report.hbs
@@ -31,7 +31,7 @@
   <div class="col-md-6" style="text-align:end">
     <div class="semester ml-2 mb-2">
       <a class="labelSemester fa fa-pencil-square-o" style="cursor: pointer;" data-toggle="modal"
-        data-target="#editSchedule" aria-hidden="true"> Xuất số liệu</a>
+        data-target="#exportReport" aria-hidden="true"> Xuất số liệu</a>
     </div>
   </div>
 </div>
@@ -58,8 +58,9 @@
       <div class="card-body">
         <div class="row no-gutters align-items-center">
           <div class="col mr-2">
-            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Tổng NV-GV</div>
-            <div class="h5 mb-0 font-weight-bold text-gray-800">120</div>
+            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Lớp học</div>
+            <div class="h5 mb-0 font-weight-bold text-gray-800">Tổng: {{countClass.total}} / 10:
+              {{countClass.listClass10}} / 11: {{countClass.listClass11}} / 12: {{countClass.listClass12}}</div>
           </div>
           <div class="col-auto">
             <i class="fas fa-users fa-2x text-gray-300"></i>
@@ -391,5 +392,34 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="exportReport" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <form class="modal-content" action="/staff/report" method="POST">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Xuất số liệu ra file excel</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body mx-3">
+        <div class="md-form mb-2 form-inline">
+          <label data-error="wrong" data-success="right" for="defaultForm-teacherID">Học kỳ</label>
+          <input name="semester" type="text" id="defaultForm-teacherID" class="form-control validate"
+            value="{{semesterID}}" required readonly>
+        </div>
+        <div class="md-form mb-2 form-inline">
+          <label data-error="wrong" data-success="right" for="defaultForm-roomID">Năm học</label>
+          <input name="year" type="text" id="defaultForm-roomID" class="form-control validate" value="{{year}}" required
+            readonly>
+        </div>
+
+        <div class="modal-footer d-flex justify-content-center">
+          <button class="btn btn-danger">Xác nhận</button>
+        </div>
+    </form>
   </div>
 </div>
